fix pyproject dependencies and build backend

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["uv>=0.1.0"]
-build-backend = "uv.build"
+requires = ["hatchling>=1.0.0"]
+build-backend = "hatchling.build"
 
 [project]
 name = "numpysocket"
@@ -16,14 +16,22 @@ dependencies = [
     "numpy<2.0.0",
 ]
 classifiers = [
-    "",
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
 ]
 keywords = []
 
 [project.urls]
 Homepage = "https://github.com/sabjorn/numpysocket"
 
-[project.optional-dependencies]
+
+[dependency-groups]
 dev = [
     "pre-commit",
+    "pytest>=7.0.1",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
