--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ authors = [
 license = {text = "MIT License"}
 requires-python = ">=3.6"
 dependencies = [
-    "numpy<2.0.0",
+    "numpy>=2.0.0",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
