--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,5 +24,5 @@ jobs:
         run: pip install uv
       - name: Build release
         run: uv build 
-      - name: debug
-        run: ls -alh 
+      - name: Publish 
+        run: uv publish 
