--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,23 +6,28 @@ on: push
 
 permissions:
   contents: read
+  id-token: write  # Required for trusted publishing
 
 jobs:
   release-build:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
+    
     environment:
       name: pypi
       url: https://pypi.org/project/numpysocket/${{ github.event.release.name }}
+    
     steps:
       - uses: actions/checkout@v4
+      
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
-      - name: Install uv 
+      
+      - name: Install uv
         run: pip install uv
-      - name: Build release
-        run: uv build 
-      - name: Publish 
-        run: uv publish 
+      
+      - name: Build package
+        run: uv build
+      
+      - name: Publish to PyPI
+        run: uv publish
