update CI publish step to get the version number from release tag

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,7 +24,20 @@ jobs:
       
       - name: Install uv
         run: pip install uv
+
+      - name: Extract version from release tag
+        run: |
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          VERSION=${TAG_NAME#v}
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "Extracted version: $VERSION"
       
+      - name: Update version in pyproject.toml
+        run: |
+          sed -i "s/version = \"[0-9]*\.[0-9]*\.[0-9]*\"/version = \"$VERSION\"/" pyproject.toml
+          echo "Updated pyproject.toml with version $VERSION"
+          cat pyproject.toml | grep version     
+
       - name: Build package
         run: uv build
       
